syntax = "proto3";

package permissions;

service PermissionService {
  rpc CheckTripAccess(CheckTripAccessRequest) returns (CheckTripAccessResponse);
  rpc CheckTripModify(CheckTripModifyRequest) returns (CheckTripModifyResponse);
  rpc CheckExpenseModify(CheckExpenseModifyRequest) returns (CheckExpenseModifyResponse);
  rpc CheckItineraryModify(CheckItineraryModifyRequest) returns (CheckItineraryModifyResponse);
  rpc GetUserMemberId(GetUserMemberIdRequest) returns (GetUserMemberIdResponse);
}

message CheckTripAccessRequest {
  string user_id = 1;
  string user_email = 2;
  string trip_id = 3;
}

message CheckTripAccessResponse {
  bool can_access = 1;
  string role = 2;
}

message CheckTripModifyRequest {
  string user_id = 1;
  string trip_id = 2;
}

message CheckTripModifyResponse {
  bool can_modify = 1;
}

message CheckExpenseModifyRequest {
  string user_id = 1;
  string user_email = 2;
  string trip_id = 3;
  string expense_creator_id = 4;
}

message CheckExpenseModifyResponse {
  bool can_modify = 1;
}

message CheckItineraryModifyRequest {
  string user_id = 1;
  string user_email = 2;
  string trip_id = 3;
  string itinerary_creator_id = 4;
}

message CheckItineraryModifyResponse {
  bool can_modify = 1;
}

message GetUserMemberIdRequest {
  string user_email = 1;
  string trip_id = 2;
}

message GetUserMemberIdResponse {
  string member_id = 1;
}
